[tool.poetry]
name = "tdd-fastapi"
version = "0.1.0"
description = "Playing with FastAPI"
authors = ["Mark Bradley <braddle@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.2"
fastapi = "^0.79.0"
mock = "^4.0.3"
uvicorn = "^0.18.2"
requests = "^2.28.1"
SQLAlchemy = "^1.4.39"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.main:app"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
